<resources>
    <string name="app_name">MyPrimeraAplicacion</string>
    <string name="action_settings">Settings</string>
    <string name="action_nuevaRopa">Nueva Ropa</string>
    <string name="title_activity_entrar_ropa">entrar_ropa</string>
    <string name="title_activity_settings">RopaSettings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_compartir_title">Desea compartir el ropero?</string>
    <string name="pref_compartir_descripcion">Comartir tu ropero permitirá a tus amigos tener visibilidad dentro de tu ropero.</string>

    <string name="pref_nombre_title">Su nombre?</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_sexo_title">Cual es tu genero?</string>
    <string-array name="pref_sexo_titulos">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Indeterminado</item>
    </string-array>
    <string-array name="pref_sexo_values">
        <item>-1</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
